# ElbALTM1

./: README.md
@doc/OLED/OLED_Module_Code/: Version_EN.txt
fw/ElbALTM1/: .mxproject  CMakeLists.txt  ElbALTM1.ioc  ElbALTM1.txt  STM32C071XX_FLASH.ld
fw/ElbALTM1/App/inc/: beep.h  draw.h  font.h  img.h  io.h  mpu6050.h  oled128x64.h  prt.h  stm32_mcu.h  stm32_pin.h  stm32_type.h
fw/ElbALTM1/App/rel/: nrcomp.cfg  nrcomp.h  rel.h
fw/ElbALTM1/App/src/: beep.c  draw.c  font.c  img.c  io.c  irq.c  mpu6050.c  ms5611.c  oled128x64.c  prt.c  tmr.c  usr.c
fw/ElbALTM1/Core/Inc/: main.h  stm32c0xx_hal_conf.h
fw/ElbALTM1/Core/Src/: gpio.c  i2c.c  main.c  spi.c  stm32c0xx_it.c  tim.c
fw/ElbALTM1/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
fw/ElbALTM1/cmake/stm32cubemx/: CMakeLists copy.txt  CMakeLists copy.txt.bak  CMakeLists.txt  CMakeLists.txt.bak
fw/ElbALTM8/ElbALTM8/: .cproject  .project  .template  ElbALTM8.launch  ElbALTM8.wvproj
fw/ElbALTM8/ElbALTM8/.mrs/: launch.json
fw/ElbALTM8/ElbALTM8/App/inc/: led.h  (+1 more)
fw/ElbALTM8/ElbALTM8/User/: main.c  main.c.bak
fw/ElbAltmSolutions/: ElbAltmSolutions.wvsln
fw/ElbAltmSolutions/.mrs/: ElbAltmSolutions.mrs-workspace
fw_ch32v/ElbAltm/: .cproject  .project  .template  ElbAltm.launch  ElbAltm.wvproj
fw_ch32v/ElbAltm/.mrs/: launch.json
fw_ch32v/ElbAltm/App/inc/: atcmd.h  ch32v_mcu.h  ch32v_pin.h  tmr.h  usr.h
fw_ch32v/ElbAltm/App/rel/: nrcomp.bat
fw_ch32v/ElbAltm/App/src/: irq.c  ms5611.c  scp.c  usr.c
fw_ch32x/ElbAltmX/: .cproject  .project  .template  ElbAltmX.launch  ElbAltmX.wvproj
fw_ch32x/ElbAltmX/App/inc/: ch32v_mcu.h  led.h  ms5611.h  scp.h
fw_ch32x/ElbAltmX/App/src/: atcmd.c  irq.c  led.c  ms5611.c  scp.c  usr.c
fw_ch32x/ElbAltmX/User/: main.c  main.c.bak
fw_stm32/ElbAltm/: .mxproject  CMakeCache.txt  CMakeLists.txt  ElbAltm.ioc  ElbAltm.txt  build.ninja  cmake_install.cmake  compile_commands.json  stm32g0b1ketxn_flash.ld
fw_stm32/ElbAltm/App/: CMakeLists.txt
fw_stm32/ElbAltm/App/inc/: stm32_mcu.h  sys.h  tmr.h  usr.h  vcp.h
fw_stm32/ElbAltm/App/rel/: nrcomp.bat  nrcomp.cfg  nrcomp.h  rel.h
fw_stm32/ElbAltm/App/src/: atcmd.c  irq.c  led.c  ms5611.c  usr.c  vcp.c
fw_stm32/ElbAltm/Core/Inc/: main.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h
fw_stm32/ElbAltm/Core/Src/: gpio.c  i2c.c  main.c  spi.c  stm32g0xx_it.c
fw_stm32/ElbAltm/_bin/: ElbAltm.hex
fw_stm32/ElbAltm/cmake/: gcc-arm-none-eabi.cmake
hw/ElbAltm1/: ElbAltm1.html  ElbAltm1.kicad_pcb  ElbAltm1.kicad_prl  ElbAltm1.kicad_pro  ElbAltm1.kicad_sch  ElbAltm1.xml
hw/ElbAltm1/Gerber/: ElbAltm1-B_Cu.gbr  ElbAltm1-B_Silkscreen.gbr  ElbAltm1-F_Mask.gbr  ElbAltm1-PTH.drl  ElbAltm1-job.gbrjob
hw/ElbAltm2/: ElbAltm2.kicad_pcb  ElbAltm2.kicad_prl  ElbAltm2.kicad_pro  ElbAltm2.kicad_sch  ~ElbAltm2.kicad_sch.lck
hw/ElbAltm2/Gerber/: ElbAltm2-B_Mask.gbr  ElbAltm2-B_Paste.gbr  ElbAltm2-Edge_Cuts.gbr  ElbAltm2-F_Cu.gbr  ElbAltm2-F_Paste.gbr  ElbAltm2-F_Silkscreen.gbr  ElbAltm2-NPTH.drl
hw/ElbAltm8/: ElbAltm8.kicad_pcb  ElbAltm8.kicad_prl  ElbAltm8.kicad_pro  ElbAltm8.kicad_sch  fp-info-cache
img/: OutputConfigs.xml
img/font/: font.c  font.c.c  font.c.h  impact_36.c  impact_36.h
img/ico/: Battery.c  cbx.c
(+31 files in other folders)
